syntax = "proto3";

option java_multiple_files = true;
option java_package = "user.profile";

service UserProfileService {
  rpc CreateUserProfile (CreateUserProfileRequest) returns (CreateUserProfileResponse);
  rpc CheckPhoneNumber (CheckPhoneNumberRequest) returns (CheckPhoneNumberResponse);

  rpc GetUserProfileInfo (GetUserProfileInfoRequest) returns (GetUserProfileInfoResponse);
}

message CreateUserProfileRequest {
  string userId = 1;
  string username = 2;
  string phoneNumber = 3;
  string dateOfBirth = 4;
  int64 genderId = 5;
  string avatarKey = 6;
}

message CreateUserProfileResponse {
  string username = 1;
  string avatarKey = 3;
}

message CheckPhoneNumberRequest {
  string phoneNumber = 1;
}

message CheckPhoneNumberResponse {
  bool isUnique = 1;
}

message GetUserProfileInfoRequest {
  string userId = 1;
}

message GetUserProfileInfoResponse {
  string username = 1;
  string avatarKey = 3;
}
